Add Auth slice and setup Firebase Authentication

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "@pages/*": ["src/pages/*"],
       "@features/*": ["src/features/*"],
       "@config/*": ["src/app/config/*"],
-      "@store/*": ["src/app/store/*"]
+      "@store/*": ["src/app/store/*"],
+      "@services/*": ["src/app/services/*"]
     }
   },
   "include": ["src"],
