--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "5.14.17",
     "@reduxjs/toolkit": "2.3.0",
     "firebase": "11.0.2",
+    "notistack": "^3.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.2",
