--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.2",
     "react-redux": "9.1.2",
-    "react-router-dom": "6.27.0"
+    "react-router-dom": "6.27.0",
+    "redux-persist": "6.0.0",
+    "uuid": "11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "9.13.0",
